[gd_scene load_steps=41 format=2]

[ext_resource path="res://Assets/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://src/Components/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://src/Components/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Effects/EnemyDeathEffect.png" type="Texture" id=6]
[ext_resource path="res://src/Enemies/States/Chase.gd" type="Script" id=7]
[ext_resource path="res://src/Enemies/States/Move.gd" type="Script" id=8]
[ext_resource path="res://src/Enemies/States/Idle.gd" type="Script" id=9]
[ext_resource path="res://src/Enemies/States/Wander.gd" type="Script" id=10]
[ext_resource path="res://src/StateMachine/StateMachine.gd" type="Script" id=11]
[ext_resource path="res://src/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Components/Hitbox.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/Components/SoftCollision.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Music and Sounds/EnemyDie.wav" type="AudioStream" id=15]
[ext_resource path="res://src/Shaders/white_colour.shader" type="Shader" id=16]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 16 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": false,
"name": "death",
"speed": 15.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 4.62913

[sub_resource type="CapsuleShape2D" id=19]
radius = 7.0
height = 6.0

[sub_resource type="CircleShape2D" id=20]
radius = 52.9612

[sub_resource type="CircleShape2D" id=21]
radius = 4.72846

[sub_resource type="CircleShape2D" id=22]
radius = 8.65165

[sub_resource type="Animation" id=23]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=24]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 2147483672
collision_mask = 5
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 17 )
animation = "fly"
playing = true
offset = Vector2( 0, -12 )

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 18 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 19 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
after_hit_protection = 0.25

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 11 )
initial_state = NodePath("Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
max_speed_default = Vector2( 20, 20 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 9 )

[node name="Wander" type="Node" parent="StateMachine/Move"]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="StateMachine/Move/Wander"]

[node name="Chase" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 12 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.156863 )
shape = SubResource( 20 )

[node name="Hitbox" parent="." instance=ExtResource( 13 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -14.5 )
shape = SubResource( 21 )

[node name="SoftCollision" parent="." instance=ExtResource( 14 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 22 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 23 )
anims/stop = SubResource( 24 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invivibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invivibility_ended"]
[connection signal="invivibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invivibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="StateMachine/Move/Wander/Timer" to="StateMachine/Move/Wander" method="_on_Timer_timeout"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
